<?xml version="1.0" encoding="utf-8"?>
<!-- DIUBAH dari ScrollView menjadi NestedScrollView -->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="?attr/colorSurface">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:paddingBottom="16dp">

        <!-- Konten Card Anggaran tidak diubah -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_anggaran"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/image_anggaran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/budget"
                    android:src="@drawable/ic_equalizer"
                    app:tint="?attr/colorOnSecondary"
                    app:layout_constraintBottom_toBottomOf="@+id/text_anggaran"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/text_anggaran" />

                <TextView
                    android:id="@+id/text_anggaran"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="Total"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorOnSurface"
                    app:layout_constraintEnd_toStartOf="@+id/text_total_label"
                    app:layout_constraintStart_toEndOf="@+id/image_anggaran"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_total_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Total Anggaran"
                    android:textColor="?attr/colorSecondary"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_total_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rp. 3.000.000,00"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_total_label" />

                <ProgressBar
                    android:id="@+id/progress_anggaran"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="8dp"
                    android:layout_marginTop="16dp"
                    android:progress="60"
                    android:progressTint="?attr/colorOnSecondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_total_amount" />

                <TextView
                    android:id="@+id/text_persentase_anggaran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="60%"
                    android:textColor="?attr/colorSecondary"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/progress_anggaran" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <!-- Konten Card Kategori tidak diubah -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_kategori"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_anggaran">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/image_kategori"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/categories"
                    android:src="@drawable/ic_list"
                    app:tint="?attr/colorOnSecondary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_kategori"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="Anggaran"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorOnSurface"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/image_kategori"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_kategori"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_kategori"
                    tools:listitem="@layout/item_category"
                    tools:itemCount="3"/>

                <Button
                    android:id="@+id/button_ubah_kategori"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="?attr/colorPrimary"
                    android:text="Ubah"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_view_kategori" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <!-- Konten Card Aset tidak diubah -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_aset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_kategori">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/image_aset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/assets"
                    android:src="@drawable/ic_coins"
                    app:tint="?attr/colorOnSecondary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_aset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="Aset"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/image_aset"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/text_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="262dp"
                    android:text="100%"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/text_aset"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_expenses_cash_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Pengeluaran"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@+id/text_expenses_cash_amount"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_percentage" />

                <TextView
                    android:id="@+id/text_expenses_cash_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rp. 500.000,00"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/text_expenses_cash_label" />

                <TextView
                    android:id="@+id/text_expenses_debit_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Pengeluaran"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@+id/text_expenses_debit_amount"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_expenses_cash_label" />

                <TextView
                    android:id="@+id/text_expenses_debit_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rp. 0,00"
                    android:textColor="?attr/colorOnSurface"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/text_expenses_debit_label" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <!-- Konten Tombol Export tidak diubah -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_export_laporan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="72dp"
            android:drawableStart="@drawable/ic_file_export"
            android:drawablePadding="16dp"
            android:elevation="2dp"
            android:gravity="center"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:stateListAnimator="@null"
            android:text="Export laporan melalui email"
            android:textAllCaps="false"
            android:textColor="@color/export_button_text_color"
            android:textSize="12sp"
            app:backgroundTint="@color/abu_abu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_aset"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
